src/test/deca/context/valid/provided/multiples_methods_fields.deca
class A {
 int x;
 void setX(int x) {this.x = x;}
 float y;
 int getX(int x) {return this.x;}
}
