src/test/deca/context/invalid/provided/returntype_incompatible.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: Right value doesn't match the expected type
class A {
  float x;
  int getX() {return this.x;}
}
